syntax = "proto3";

option java_package = "ru.mooncess.grpc";
option java_outer_classname = "PaymentServiceProto";


service PaymentService {
  rpc CreatePaymentForm (PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
  int64 id = 1;
  string amount = 2;
  string redirect_url = 3;
}

message PaymentResponse {
  string payment_url = 1;
}